[Android] Finished Welcome Page
Forget to Notice in Previous Commit:
- Adding Useful Library
- Using binding for Calling View

Do:
- Adding Welcome Page Logic and Contents

Next:
- Adding more data in RESTful service
- Create Home Page
- Create Search Page
- Create Favorite Page

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -10,4 +10,6 @@
     <string name="shopping_cart">Shopping Cart</string>
     <string name="account">Account</string>
     <string name="press_again">Press Again to Exit</string>
+    <string name="get_started">GET STARTED</string>
+    <string name="temp_title">Testing Title Section</string>
 </resources>
