[Android & RESTful Services] Update Android & RESTful service
Android:
- get product by category & type

RESTful Service:
- limit collection results
- Add find product by category id and type name
- Add get type by ID and name

Next:
- Add show more button
- Add latest logic in android
- Add Show all result

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -25,4 +25,5 @@
     <string name="check_our_official_store">Check Our \nOfficial Store</string>
     <string name="check_now">Check Now</string>
     <string name="no_data">No Data</string>
+    <string name="see_more">See more</string>
 </resources>
