[Android & RESTful Services] Update Android & Backend Service
Android:
- Add more content in detail product
- Add change product data by choose color
- Add Image View in Detail
- Connect Set/Remove Product from Favorite

RESTful Service:
- Change data get logic by modify the group by

Next:
- Add more content in Detail page
- Add Add-Remove Product Logic
- Add shopping bag database

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -37,4 +37,8 @@
     <string name="show_indicator">container show indicator</string>
     <string name="color">Color</string>
     <string name="temp_rating">4.8</string>
+    <string name="stock">Stock</string>
+    <string name="temp_stock">190</string>
+    <string name="type">Type</string>
+    <string name="back">Back</string>
 </resources>
