[Android] Update Android
Do:
- Add Setting page
- Add about page
- Finish load data in Details
- Add Add-Remove Field Listener

Next:
- Create order database in backend
- Create shopping cart database in Android

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -41,4 +41,27 @@
     <string name="temp_stock">190</string>
     <string name="type">Type</string>
     <string name="back">Back</string>
+    <string name="copyright">©2021 | Patricia Fiona</string>
+    <string name="setting">Setting</string>
+    <string name="about">About</string>
+    <string name="theme">Theme</string>
+    <string name="nike">NIKE</string>
+    <string name="about_nike_1">Nike, Inc. is an American multinational corporation that is engaged in the design, development, manufacturing, and worldwide marketing and sales of footwear, apparel, equipment, accessories, and services.
+        The company is headquartered near Beaverton, Oregon, in the Portland metropolitan area. It is the world\'s largest supplier of athletic shoes and apparel and a major manufacturer of sports equipment, with revenue in excess of US$37.4 billion in its fiscal year 2020 (ending May 31, 2020).
+        As of 2020, it employed 76,700 people worldwide. In 2020 the brand alone was valued in excess of $32 billion, making it the most valuable brand among sports businesses. Previously, in 2017, the Nike brand was valued at $29.6 billion.
+        Nike ranked 89th in the 2018 Fortune 500 list of the largest United States corporations by total revenue.</string>
+    <string name="about_nike_2">The company was founded on January 25, 1964, as "Blue Ribbon Sports", by Bill Bowerman and Phil Knight,
+        and officially became Nike, Inc. on May 30, 1971. The company takes its name from Nike, the Greek goddess of victory.
+        Nike markets its products under its own brand, as well as Nike Golf, Nike Pro, Nike+, Air Jordan, Nike Blazers,
+        Air Force 1, Nike Dunk, Air Max, Foamposite, Nike Skateboarding, Nike CR7, and subsidiaries including Jordan Brand and Converse.
+        Nike also owned Bauer Hockey from 1995 to 2008, and previously owned Cole Haan, Umbro, and Hurley International.
+        In addition to manufacturing sportswear and equipment, the company operates retail stores under the Niketown name.
+        Nike sponsors many high-profile athletes and sports teams around the world, with the highly recognized trademarks of
+        "Just Do It" and the Swoosh logo.</string>
+    <string name="buy_the_product">Buy the Product</string>
+    <string name="select_europe_size">Select Europe Size</string>
+    <string name="quantity">Quantity</string>
+    <string name="add_to_bag">Add to Bag</string>
+    <string name="details">Details</string>
+    <string name="temp_quantity">1</string>
 </resources>
