[Android] Update Android
Android:
- Show product in cart
- add logic in product cart button
- fixed the room queries for cart
- Fixed the bug in showing product size for women
- Fixed show favorite if the product id is same

Next:
- Add discount feature show in the UI
- Add Login-Sign In Feature
- Add check out logic and save data to transaction database
- Add transaction history using tab view (like shopee)

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -75,4 +75,6 @@
     <string name="checkout">Checkout</string>
     <string name="remove_from_bag">Remove From Bag</string>
     <string name="update_to_bag">Update to Bag</string>
+    <string name="confirm">Confirm</string>
+    <string name="cancel">Cancel</string>
 </resources>
