[Android & RESTful Services] Update Android & Backend Service
Android:
- Add Sign Up & Login logic-connection
- Show user data in the user account page
- Show user address in checkout page if the user already login

RESTful service:
- Add Some function backend like insert user, update login information, update user data, and delete user

Next:
- Add checkout product to transaction database

--- a/Android Source Code/NIKE/app/src/main/res/values/strings.xml
+++ b/Android Source Code/NIKE/app/src/main/res/values/strings.xml
@@ -77,4 +77,21 @@
     <string name="update_to_bag">Update to Bag</string>
     <string name="confirm">Confirm</string>
     <string name="cancel">Cancel</string>
+    <string name="connect_to_buy_our_special_product">Connect to Buy Our Special Product</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="login">Login</string>
+    <string name="or">OR</string>
+    <string name="sign_up">Sign Up</string>
+    <string name="phone_number">Phone Number</string>
+    <string name="name">Name</string>
+    <string name="address">Address</string>
+    <string name="pick_date">Pick Date</string>
+    <string name="user_name">User Name</string>
+    <string name="edit">Edit</string>
+    <string name="delete">Delete</string>
+    <string name="my_order">My Order</string>
+    <string name="see_order_history">See Order History</string>
+    <string name="temp_date">12-12-2021</string>
+    <string name="logout">Logout</string>
 </resources>
